--- a/osm2mssql.Importer/Languages/Languages.xaml
+++ b/osm2mssql.Importer/Languages/Languages.xaml
@@ -15,7 +15,8 @@
     <system:String x:Key="Start">Start</system:String>
     <system:String x:Key="Stop">Stop</system:String>
     
-    <system:String x:Key="CreateDatabaseTaskDescription">Creates the database structure</system:String>
+    <system:String x:Key="CreateDatabaseTaskDescription">Creates the database with drop existing</system:String>
+    <system:String x:Key="CreateTablesTaskDescription">Creates the database tables</system:String>
     <system:String x:Key="TaskInstallDbExtension">Install database-extensions</system:String>
     <system:String x:Key="ReadNodeTaskDescription">Read all nodes</system:String>
     <system:String x:Key="TaskAttributeWriterDescription">Write Tags</system:String> 
@@ -24,7 +25,8 @@
     <system:String x:Key="CreateLineInDBTaskDescription">Create a geography object foreach way</system:String>
     <system:String x:Key="ReadRelationTaskDescription">Reading all relations</system:String>
     <system:String x:Key="CreateRelationInDBTaskDescription">Create the relations in the database</system:String>
-    <system:String x:Key="TaskExecuteSqlCommands">Custom SQL-Commands after importing</system:String>
+    <system:String x:Key="TaskExecuteSqlProcessChanges">Process changes and update 'info' schema</system:String>
+    <system:String x:Key="TaskExecuteSqlCleanupDB">Cleanup Database</system:String>
     <system:String x:Key="TaskNodeIndicesDescription">Create indices on tNode/tNodeTag</system:String>
     <system:String x:Key="TaskWayIndicesDescription">Create indices on tWay/tNWayTag</system:String>
     <system:String x:Key="TaskRelationIndicesDescription">Create indices on tRelation/tRelationTag</system:String>
