--- a/osm2mssql.Importer/Views/ImporterView.xaml
+++ b/osm2mssql.Importer/Views/ImporterView.xaml
@@ -1,18 +1,19 @@
 ﻿<Window x:Class="osm2mssql.Importer.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ViewModel="clr-namespace:osm2mssql.Importer.ViewModel"  Title="osm2mssql" Height="550" MinWidth="500" Width="800" Icon="../Images/App.ico">
+        xmlns:ViewModel="clr-namespace:osm2mssql.Importer.ViewModel"  Title="osm2mssql" Height="750" MinWidth="700" Width="1000" Icon="../Images/App.ico">
     <Window.Resources>
         <ViewModel:ImporterViewModel x:Key="vm"/>
     </Window.Resources>
     <Grid DataContext="{StaticResource vm}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="500"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding LogRows}" Grid.Column="1" Margin="3"/>
+        <ListBox ItemsSource="{Binding LogRows}" Grid.Column="1" Margin="3,3,3,3" Grid.ColumnSpan="2"/>
 
-        <GroupBox Margin="3">
+        <GroupBox Margin="3,3,3,3">
             <GroupBox.Header>
                 <StackPanel Orientation="Horizontal">
                     <Image Height="16" Margin="3,0,3,0" Source="../Images/world.png"/>
@@ -92,19 +93,26 @@
                     </Grid>
                 </GroupBox>
 
-                <GroupBox Grid.Row="1" Header="{StaticResource Import}" Margin="3">
+                <GroupBox Grid.Row="1" Header="{StaticResource Import}" Margin="4">
+
                     <Grid>
                         <Grid.RowDefinitions>
+                            <RowDefinition Height="25"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <ItemsControl ItemsSource="{Binding Tasks}" Margin="3" Grid.Row="0">
+                        <CheckBox  Grid.Column="0" Grid.Row="0"  IsChecked="{Binding SelectAll, Mode=TwoWay}"
+                   Margin="4" />
+
+
+                        <ItemsControl ItemsSource="{Binding Tasks}" Margin="3"  Grid.Row="1">
                             <ItemsControl.Template>
                                 <ControlTemplate>
                                     <ScrollViewer HorizontalContentAlignment="Stretch" VerticalScrollBarVisibility="Auto">
                                         <ItemsPresenter HorizontalAlignment="Stretch"/>
                                     </ScrollViewer>
                                 </ControlTemplate>
+
                             </ItemsControl.Template>
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
@@ -168,8 +176,8 @@
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
-                        <Image  Grid.Row="0" Source="../Images/osm.png" Opacity="0.15" Margin="8"/>
-                        <Button IsEnabled="{Binding IsNotProcessing}" Command="{Binding StartImport}" Margin="3" VerticalAlignment="Center" Grid.Row="1" Content="{StaticResource StartImport}"/>
+                        <Image  Grid.Row="0" Source="../Images/osm.png" Opacity="0.15" Margin="8,8,8,8"/>
+                        <Button IsEnabled="{Binding IsNotProcessing}" Command="{Binding StartImport}" Margin="3,0,3,0" VerticalAlignment="Center" Grid.Row="2" Content="{StaticResource StartImport}" Height="20"/>
                     </Grid>
                 </GroupBox>
             </Grid>
